--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://marksolidor.github.io/React-Gallery/",
+    "homepage": "https://marksolidor.github.io/Galley-with-react",
     "name": "desafio-latam1",
     "version": "0.1.0",
     "private": true,
